[package]
edition      = "2024"
name         = "lora-experiment"
rust-version = "1.88"
version      = "0.1.0"

[features]
default = ["defmt"]
defmt = []

[[bin]]
name = "lora-experiment"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = "0.1"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
] }
trouble-host = { version = "0.5.0", features = ["gatt", "scan", "central", "defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
rand             = { version = "0.8", default-features = false }
fugit            = "0.3"
# lora-phy = { git = "https://github.com/lora-rs/lora-rs", branch = "main", features = ["lorawan-radio", "defmt-03"] }
# lorawan-device = { git = "https://github.com/lora-rs/lora-rs", branch = "main", default-features = false, features = [
#     "embassy-time",
#     "region-eu868",
#     "defmt-03"
# ] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = "0.7.2"
lora-phy = { version = "3.0.1", features = ["lorawan-radio"] }
lorawan-device = { version = "0.12.2", features = ["region-eu868", "default-crypto", "defmt"], default-features = false }

# Victron BLE dependencies
aes = { version = "0.8", default-features = false }
heapless = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
